--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,277 @@
-.App {
+
+.head-frame {
+  background-color: orange;
+  margin: 0 auto;
+  width: auto;
+  /* position content*/
+  display: flex;
+  justify-content: flex-start;
+  /* adjustment */
+  position: relative;
+}
+.head-title {
+  font-size: 29px;
+  font-family: cursive;
+  color: black;
+  margin-top: 1%;
+  /* position horizontal*/
+  flex: 0 1 auto;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.head-icon {
+  padding-right: 3%;
+  /* position horizontal*/
+  flex: 0 1 auto;
+  margin-left: auto;
+}
+.makeRow {
+  display: flex;
+}
+.centeringText {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.center-object {
+  margin: auto;
+}
+.text-pointer {
+  cursor: pointer;
+}
+.text-pointer:hover {
+  color: rgba(77, 17, 17);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.center-by-margin {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 17px;
+  margin: 0 auto;
+  width: 71%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-project {
+  border: 1px solid rgba(77, 17, 17);
+  border-radius: 3px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  max-height: 301px;
+  width: 301px;
+  margin-left: 3px;
+  margin-top: 3px;
+}
+.card-project:hover {
+  background-color: #EEEEEE;
+  border: 2px solid rgb(77, 17, 17);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.miesiąc {
+  margin: 3%;
+  padding-left: 7px;
+}
+.limit-width-sieben {
+  margin-left: 3%;
+  width: 91%;
+}
+.tydzień {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  margin: 3%;
+}
+.tydzień-sunday {
+  margin-left: 3%;
+  font-weight: 500;
+  color: brown;
+}
+.tydzień-saturday {
+  color: darkmagenta;
+  text-align: center;
+}
+.dni-container {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  margin: 3%;
+  padding: 2px;
+}
+.dni-pto-text {
+  cursor: pointer;
+  text-align: center;
+  font-weight: 400;
+  color: firebrick;
+  background-color: bisque;
+}
+.dni-pto-text:hover {
+  transition: 0.3s;
+  font-weight: 800;
+  color: brown;
+}
+.dni-bank-text {
+  cursor: pointer;
+  text-align: center;
+  font-weight: 600;
+  color: darkcyan;
+  background-color: aquamarine;
+}
+
+.tooltip {
+  display:inline-block;
+  position:relative;
+  border-bottom:1px dotted #666;
+  text-align:left;
+}
+.tooltip .left {
+  min-width:200px; 
+  top:50%;
+  right:100%;
+  margin-right:20px;
+  transform:translate(0, -50%);
+  padding:7px 17px;
+  color:#444444;
+  background-color:#EEEEEE;
+  font-weight:normal;
+  font-size:13px;
+  border-radius:8px;
+  position:absolute;
+  z-index:99999999;
+  box-sizing:border-box;
+  box-shadow:0 1px 8px rgba(0,0,0,0.5);
+  display:none;
+}
+
+.tooltip:hover .left {
+  display:block;
+}
+
+.tooltip .left i {
+  position:absolute;
+  top:50%;
+  left:100%;
+  margin-top:-12px;
+  width:12px;
+  height:24px;
+  overflow:hidden;
+}
+
+.tooltip .left i::after {
+  content:'';
+  position:absolute;
+  width:12px;
+  height:12px;
+  left:0;
+  top:50%;
+  transform:translate(-50%,-50%) rotate(-45deg);
+  background-color:#EEEEEE;
+  box-shadow:0 1px 8px rgba(0,0,0,0.5);
+}
+
+
+
+.remark-frame {
+  height: 71px;
+  margin: 0 auto;
+}
+.remark {
+  cursor: pointer;
+  text-align: center;
+  margin-top: 31px;
+  color: blue;
+  font-family: cursive;
+  font-size: 17px;
+  animation-duration: 3s;
+  animation-name: remarking;
+}
+@keyframes remarking {
+    0% {
+      color: rgb(63, 61, 61);
+    }
+    51% {
+      font-size: 21px;
+      color: rgb(117, 5, 5);
+      text-shadow: 0 0 10px #fff,
+                   0 0 20px #fff, 
+                   0 0 40px #fff;
+    }
+    100% {
+      font-size: 17px;
+      color: blue;
+    }
+}
+
+
+/*useless begin*/
+.kalkulator-frame {
+  text-align: center;
+  margin: 0 auto;
+  width: 91%;
+  padding: 7px;
+}
+.kalkulator-input-frame {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 1%
+}
+.kalkulator-line {
+  margin: 0 auto;
+  height: 27px;
+  width: 17%;
+  border: #fff;
+  box-shadow: 0 3px 7px 0 rgba(0,0,0,0.2);
+  border-radius: 3px;
+}
+.kalkulator-line:hover {
+  border-bottom: 1px solid #444444;
+  box-shadow: 0 5px 11px 0 rgba(0,0,0,0.2);
+}
+.kalkulator-button {
+  cursor: pointer;
+  text-align: center;
+  margin: 0 auto;
+  padding: 7px;
+  width: 11%;
+  border: 1px solid brown;
+  border-radius: 5px;
+}
+.kalkulator-button:hover {
+  transition: .3s;
+  font-weight: 500;
+  background-color:#EEEEEE;
+  border: 1px solid rgb(0, 0, 0);
+}
+.kalkulator-button:active {
+  font-weight: 700;
+  border: 2px solid rgb(189, 129, 121);
+  box-shadow: 0 7px 7px 0 solid rgb(0, 0, 0);
+}
+/*useless end*/
+
+.wynik-frame {
+  padding: 1%;
+  display: flex;
+}
+.wynik-swój {
+  margin-left: auto;
+  text-align: right;
+}
+.wynik-numer {
+  cursor: pointer;
+  margin-right: auto;
+  text-align: left;
+  margin-left: 7px;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.bottom-note {
+  margin: 0 auto;
+  padding-top: 17px;
+  width: 71%;
+}
+.bottom-note-bank {
+  cursor: pointer;
+  color: darkcyan;
+}
+.bottom-note-PTO {
+  color: firebrick;
 }
