--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,5 @@
 
-.head-frame {
-  background-color: orange;
-  margin: 0 auto;
-  width: auto;
-  /* position content*/
-  display: flex;
-  justify-content: flex-start;
-  /* adjustment */
-  position: relative;
-}
-.head-title {
-  font-size: 31px;
-  font-family: cursive;
-  color: black;
-  rotate: -7deg;
-  border-bottom: 1px solid black;
-  /* position horizontal*/
-  flex: 0 1 auto;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.head-icon {
-  padding-right: 3%;
-  /* position horizontal*/
-  flex: 0 1 auto;
-  margin-left: auto;
-}
+
 .makeRow {
   display: flex;
 }
@@ -44,200 +17,187 @@
 }
 
 
+.head-frame {
+  background-color: orange;
+  margin: 0 auto;
+  height: auto;
+  width: auto;
+  /* position content*/
+  display: flex;
+  justify-content: flex-start;
+  /* adjustment */
+  position: relative;
+}
+.head-title {
+  font-size: 23px;
+  font-family: cursive;
+  color: black;
+  /* position horizontal*/
+  flex: 0 1 auto;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.head-icon {
+  align-content: center;
+  padding-right: 1%;
+  cursor: pointer;
+  /* position horizontal*/
+  flex: 0 1 auto;
+  transform: translateX(-50%);
+  margin-top: auto;
+  margin-left: auto;
+}
+.head-icon-img {
+  height: 29px;
+}
+
+.main-claim-background {
+  background-color:beige;
+}
+.main-claim {
+  cursor: pointer;
+  text-align: center;
+  padding: 3%;
+  font-size: 31px;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.main-claim:hover span{
+  color: rgb(126, 37, 37);
+  transition: .3s linear;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 500;
+  padding: 1%;
+}
+.main-claim:hover span:nth-child(3)::after {
+  content: " ???";
+}
+.main-claim span:nth-child(2) {
+  animation-duration: 3s;
+  animation-name: ai-moving;
+}
+@keyframes ai-moving {
+  0% {
+    transition: .3s;
+    background-color: antiquewhite;
+  }
+  20% {
+    transition: .3s;
+    padding: 2%;
+    color: gold;
+  }
+  50% {
+    transition: .3s;
+    padding: 3%;
+    color: burlywood;
+    font-size: large;
+  }
+  70% {
+    transition: .3s;
+    padding: 2%;
+    color:darkgoldenrod
+  }
+  100% {
+    transition: .3s;
+    color: darkblue;
+  }
+}
 
 /* posters area begin*/
-.poster-area {
-  background-color: black;
-}
-.posters-frame {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1%;
+.project-area {
   margin: 0 auto;
+  padding: 3%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   width: 71%;
 }
-.posters-each-work {
-  cursor: pointer;
-  border-bottom: 1px solid rgba(77, 17, 17);
-  border-right: 1px solid rgba(77, 17, 17);
+.project-eachcard {
+  border: 1px solid rgba(77, 17, 17);
+  border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  background-color: black;
   transition: 0.3s;
-  width: 100%;
-  height: 100%;
+  width: 71%;
+  margin: 0 auto;
+  padding: 1%;
 }
-.posters-each-work:hover {
+.project-eachcard:hover {
+  transition: 0.3s;
   background-color: #EEEEEE;
+  border: 2px solid rgb(77, 17, 17);
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-}
-.poster-image-parameter {
-  padding-top: 3%;
-}
-img {
-  max-width: 59%;
-  max-height: 59%;
-}
-img:hover {
-  max-width: 79%;
-  max-height: 79%;
-  transition: 0.3s;
 }
 .limit-width-sieben {
   margin-left: 3%;
+  width: 71%;
+}
+.project-title {
+  margin: 0 auto;
   width: 91%;
+  padding: 1%;
+  cursor: pointer;
 }
-.poster-introduction-each-frame {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 3%;
+.project-title:hover {
+  transition: 0.3s;
+  font-weight: 700;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
+.project-brief {
+  margin: 0 auto;
+  width: 91%;
+  padding: 1%;
+  font-family:'Courier New', Courier, monospace;
+}
 /* posters area end */
 
 
-.tooltip {
-  display:inline-block;
-  position:relative;
-  border-bottom:1px dotted #666;
-  text-align:left;
-}
-.tooltip .left {
-  min-width:200px; 
-  top:50%;
-  right:100%;
-  margin-right:20px;
-  transform:translate(0, -50%);
-  padding:7px 17px;
-  color:#444444;
-  background-color:#EEEEEE;
-  font-weight:normal;
-  font-size:13px;
-  border-radius:8px;
-  position:absolute;
-  z-index:99999999;
-  box-sizing:border-box;
-  box-shadow:0 1px 8px rgba(0,0,0,0.5);
-  display:none;
-}
-
-.tooltip:hover .left {
-  display:block;
-}
-
-.tooltip .left i {
-  position:absolute;
-  top:50%;
-  left:100%;
-  margin-top:-12px;
-  width:12px;
-  height:24px;
-  overflow:hidden;
-}
-
-.tooltip .left i::after {
-  content:'';
-  position:absolute;
-  width:12px;
-  height:12px;
-  left:0;
-  top:50%;
-  transform:translate(-50%,-50%) rotate(-45deg);
-  background-color:#EEEEEE;
-  box-shadow:0 1px 8px rgba(0,0,0,0.5);
-}
 
 
-
-.remark-frame {
-  height: 71px;
+.opis-frame {
+  width: 71%;
   margin: 0 auto;
 }
-.remark {
+.opis {
+  margin: 1%;
   cursor: pointer;
-  text-align: center;
-  margin-top: 31px;
   color: blue;
   font-family: cursive;
   font-size: 17px;
-  animation-duration: 3s;
+  animation-duration: 1s;
   animation-name: remarking;
 }
 @keyframes remarking {
     0% {
-      color: rgb(63, 61, 61);
+      color: rgb(245, 236, 236);
     }
-    51% {
-      font-size: 21px;
+    31% {
+      transition: .3s;
+      color: gold
+    }
+    71% {
+      transition: .3s;
       color: rgb(117, 5, 5);
-      text-shadow: 0 0 10px #fff,
-                   0 0 20px #fff, 
-                   0 0 40px #fff;
     }
     100% {
-      font-size: 17px;
+      transition: 0.3s;
       color: blue;
     }
 }
+.opis-poster-example {
+  max-width: 17%;
+  max-height: 17%;
+}
+.opis-poster-example:hover {
+  max-width: 23%;
+  max-height: 23%;
+  transition: 0.3s;
+}
 
-
-/*useless begin*/
-.kalkulator-frame {
-  text-align: center;
-  margin: 0 auto;
-  width: 91%;
-  padding: 7px;
-}
-.kalkulator-input-frame {
-  text-align: center;
-  display: flex;
-  margin: 1%
-}
-.kalkulator-line {
-  margin: 0 auto;
-  height: 27px;
-  width: 17%;
-  border: #fff;
-  box-shadow: 0 3px 7px 0 rgba(0,0,0,0.2);
-  border-radius: 3px;
-}
-.kalkulator-line:hover {
-  border-bottom: 1px solid #444444;
-  box-shadow: 0 5px 11px 0 rgba(0,0,0,0.2);
-}
-.kalkulator-button {
-  cursor: pointer;
-  text-align: center;
-  margin: 0 auto;
-  padding: 7px;
-  width: 11%;
-  border: 1px solid brown;
-  border-radius: 5px;
-}
-.kalkulator-button:hover {
-  transition: .3s;
-  font-weight: 500;
-  background-color:#EEEEEE;
-  border: 1px solid rgb(0, 0, 0);
-}
-.kalkulator-button:active {
-  font-weight: 700;
-  border: 2px solid rgb(189, 129, 121);
-  box-shadow: 0 7px 7px 0 solid rgb(0, 0, 0);
-}
-/*useless end*/
 
 
 
 .bottom-note {
+  text-align: center;
   margin: 0 auto;
-  padding-top: 17px;
+  padding-top: 3%;
   width: 71%;
-}
-.bottom-note-bank {
-  cursor: pointer;
-  color: darkcyan;
-}
-.bottom-note-PTO {
-  color: firebrick;
 }
