--- a/src/App.css
+++ b/src/App.css
@@ -55,97 +55,144 @@
 .main-claim-background {
   background-color:beige;
 }
-.main-claim {
-  cursor: pointer;
-  text-align: center;
-  padding: 3%;
-  font-size: 31px;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-.main-claim:hover span{
-  color: rgb(126, 37, 37);
-  transition: .3s linear;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: 500;
-  padding: 1%;
-}
-.main-claim:hover span:nth-child(3)::after {
-  content: " ???";
-}
-.main-claim span:nth-child(2) {
-  animation-duration: 3s;
-  animation-name: ai-moving;
-}
-@keyframes ai-moving {
-  0% {
-    transition: .3s;
-    background-color: antiquewhite;
-  }
-  20% {
-    transition: .3s;
-    padding: 2%;
-    color: gold;
-  }
-  50% {
-    transition: .3s;
+@media screen 
+and (max-device-width: 900px) {
+  .main-claim {
+    cursor: pointer;
+    text-align: center;
     padding: 3%;
-    color: burlywood;
-    font-size: large;
+    font-size: 31px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   }
-  70% {
-    transition: .3s;
-    padding: 2%;
-    color:darkgoldenrod
+}
+@media screen 
+and (min-device-width: 911px) {
+  .main-claim {
+    cursor: pointer;
+    text-align: center;
+    padding: 3%;
+    font-size: 31px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   }
-  100% {
-    transition: .3s;
-    color: darkblue;
+  .main-claim:hover span{
+    color: rgb(126, 37, 37);
+    transition: .3s linear;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 500;
+    padding: 1%;
+  }
+  .main-claim:hover span:nth-child(3)::after {
+    content: " ???";
+  }
+  .main-claim span:nth-child(2) {
+    animation-duration: 3s;
+    animation-name: ai-moving;
+  }
+  @keyframes ai-moving {
+    0% {
+      transition: .3s;
+      background-color: antiquewhite;
+    }
+    20% {
+      transition: .3s;
+      padding: 2%;
+      color: gold;
+    }
+    50% {
+      transition: .3s;
+      padding: 3%;
+      color: burlywood;
+      font-size: large;
+    }
+    70% {
+      transition: .3s;
+      padding: 2%;
+      color:darkgoldenrod
+    }
+    100% {
+      transition: .3s;
+      color: darkblue;
+    }
   }
 }
 
+
 /* posters area begin*/
-.project-area {
-  margin: 0 auto;
-  padding: 3%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  width: 71%;
+@media screen 
+and (max-device-width: 900px) {
+  .project-area {
+    margin: 0 auto;
+    padding: 3%;
+    width: 71%;
+  }
+  .project-eachcard {
+    border: 1px solid rgba(77, 17, 17);
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 91%;
+    margin: 0 auto;
+    padding: 1%;
+  }
+  .project-title {
+    margin: 0 auto;
+    width: 91%;
+    padding: 1%;
+    cursor: pointer;
+  }
+  .project-brief {
+    margin: 0 auto;
+    width: 91%;
+    padding: 1%;
+    font-size: 11px;
+    font-family:'Courier New', Courier, monospace;
+  }
 }
-.project-eachcard {
-  border: 1px solid rgba(77, 17, 17);
-  border-radius: 3px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 71%;
-  margin: 0 auto;
-  padding: 1%;
-}
-.project-eachcard:hover {
-  transition: 0.3s;
-  background-color: #EEEEEE;
-  border: 2px solid rgb(77, 17, 17);
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-.limit-width-sieben {
-  margin-left: 3%;
-  width: 71%;
-}
-.project-title {
-  margin: 0 auto;
-  width: 91%;
-  padding: 1%;
-  cursor: pointer;
-}
-.project-title:hover {
-  transition: 0.3s;
-  font-weight: 700;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.project-brief {
-  margin: 0 auto;
-  width: 91%;
-  padding: 1%;
-  font-family:'Courier New', Courier, monospace;
+@media screen 
+and (min-device-width: 911px) {
+  .project-area {
+    margin: 0 auto;
+    padding: 3%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 71%;
+  }
+  .project-eachcard {
+    border: 1px solid rgba(77, 17, 17);
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 71%;
+    margin: 0 auto;
+    padding: 1%;
+  }
+  .project-eachcard:hover {
+    transition: 0.3s;
+    background-color: #EEEEEE;
+    border: 2px solid rgb(77, 17, 17);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  .limit-width-sieben {
+    margin-left: 3%;
+    width: 71%;
+  }
+  .project-title {
+    margin: 0 auto;
+    width: 91%;
+    padding: 1%;
+    cursor: pointer;
+  }
+  .project-title:hover {
+    transition: 0.3s;
+    font-weight: 700;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  .project-brief {
+    margin: 0 auto;
+    width: 91%;
+    padding: 1%;
+    font-family:'Courier New', Courier, monospace;
+  }
 }
 /* posters area end */
 
@@ -160,7 +207,7 @@
   margin: 1%;
   cursor: pointer;
   color: blue;
-  font-family: cursive;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 17px;
   animation-duration: 1s;
   animation-name: remarking;
@@ -171,11 +218,13 @@
     }
     31% {
       transition: .3s;
-      color: gold
+      color: gold;
+      font-family: cursive;
     }
     71% {
       transition: .3s;
       color: rgb(117, 5, 5);
+      font-family: cursive;
     }
     100% {
       transition: 0.3s;
