--- a/src/App.css
+++ b/src/App.css
@@ -200,32 +200,60 @@ and (min-device-width: 911px) {
   width: 71%;
   margin: 0 auto;
 }
-.opis {
-  margin: 1%;
-  color: black;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 17px;
-  animation-duration: 1s;
-  animation-name: remarking;
+@media screen 
+and (max-device-width: 900px) {
+  .opis {
+    margin: 1%;
+    color: black;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 11px;
+    animation-duration: 1s;
+    animation-name: remarking;
+  }
+  @keyframes remarking {
+      0% {
+        color: rgb(245, 236, 236);
+      }
+      51% {
+        transition: .3s;
+        color: gold;
+        font-family: cursive;
+      }
+      100% {
+        transition: 0.3s;
+        color: black
+      }
+  }
 }
-@keyframes remarking {
-    0% {
-      color: rgb(245, 236, 236);
-    }
-    31% {
-      transition: .3s;
-      color: gold;
-      font-family: cursive;
-    }
-    71% {
-      transition: .3s;
-      color: rgb(117, 5, 5);
-      font-family: cursive;
-    }
-    100% {
-      transition: 0.3s;
-      color: blue;
-    }
+@media screen 
+and (min-device-width: 911px) {
+  .opis {
+    margin: 1%;
+    color: black;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 17px;
+    animation-duration: 1s;
+    animation-name: remarking;
+  }
+  @keyframes remarking {
+      0% {
+        color: rgb(245, 236, 236);
+      }
+      31% {
+        transition: .3s;
+        color: gold;
+        font-family: cursive;
+      }
+      71% {
+        transition: .3s;
+        color: rgb(117, 5, 5);
+        font-family: cursive;
+      }
+      100% {
+        transition: 0.3s;
+        color: blue;
+      }
+  }
 }
 .opis-poster-example {
   max-width: 17%;
