--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,8 @@ and (max-device-width: 900px) {
   }
   .opis-poster-phoneview {
     margin: 7%;
-    border-bottom: gold solid 1px;
+    padding-bottom: 3%;
+    border-bottom: ghostwhite solid 1px;
   }
   .opis-poster-example {
     max-width: 91%;
