--- a/src/App.css
+++ b/src/App.css
@@ -275,6 +275,13 @@ and (max-device-width: 900px) {
     font-size: 11px;
     font-family:'Courier New', Courier, monospace;
   }
+  .bottom-note {
+    font-size: 11px;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 3%;
+    width: 71%;
+  }
 }
 @media screen 
 and (min-device-width: 911px) {
@@ -348,14 +355,13 @@ and (min-device-width: 911px) {
     margin-top: 1%;
     font-family:'Courier New', Courier, monospace;
   }
+  .bottom-note {
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 3%;
+    width: 71%;
+  }
 }
 
 
 
-
-.bottom-note {
-  text-align: center;
-  margin: 0 auto;
-  padding-top: 3%;
-  width: 71%;
-}
