--- a/src/App.css
+++ b/src/App.css
@@ -88,27 +88,36 @@ and (min-device-width: 911px) {
     cursor: pointer;
   }
   .project-eachcard:hover {
+    min-height: 31vh;
+    color:transparent;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    animation: expanding 1.7s
+  }
+  .project-eachcard-philosophy:hover {
     background-image: url('https://i1.sndcdn.com/avatars-000630027939-oz4eqi-t200x200.jpg');
     background-size: cover; /* Ensures the image covers the whole element */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
-    min-height: 31vh;
-    transition: 1.3s ease;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    animation: expanding 2.5s
+  }
+  .project-eachcard-readStory:hover {
+    background-image: url('https://www.instagram.com/p/C2aO5t-oRfP/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==');
+    background-size: cover; /* Ensures the image covers the whole element */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+  }
+  .project-eachcard-aboutAuthor:hover {
+    background-image: url('https://pbs.twimg.com/media/FvjIH-eWYAIcGI4?format=jpg&name=small');
+    background-size: cover; /* Ensures the image covers the whole element */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
   }
   @keyframes expanding {
-    0% {
+    from {
       min-height: 0vh;
     }
-    30% {
-      min-height: 11vh;
-    }
-    50% {
-      min-height: 17vh;
-    }
-    70% {
-      min-height: 23vh;
+    to {
+      min-height: 31vh;
+      color:transparent;
     }
   }
   .project-title {
