--- a/src/App.css
+++ b/src/App.css
@@ -94,19 +94,19 @@ and (min-device-width: 911px) {
     animation: expanding 1.7s
   }
   .project-eachcard-philosophy:hover {
-    background-image: "https://github.com/Conrading/wroclaw-project/blob/main/docs/accessFile/20240519_reelCover.jpeg?raw=true"; /**/
+    background-image: url("https://conrading.github.io/wroclaw-project/accessFile/01.jpg"); 
     background-size: cover; /* Ensures the image covers the whole element */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
   }
   .project-eachcard-readStory:hover {
-    background-image: url('https://github.com/Conrading/wroclaw-project/blob/main/docs/accessFile/240519.jpeg?raw=true');
+    background-image: url('https://conrading.github.io/wroclaw-project/accessFile/02.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
   }
   .project-eachcard-aboutAuthor:hover {
-    background-image: url('https://github.com/Conrading/wroclaw-project/blob/main/docs/accessFile/ISO_05.jpeg?raw=true');
+    background-image: url('https://conrading.github.io/wroclaw-project/accessFile/03.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
