update css and last try pdf

--- a/src/components/author.css
+++ b/src/components/author.css
@@ -4,16 +4,34 @@
     align-items: center;
     margin: 0; 
 }
-.author-photo {
-    margin: 0 auto;
-    height: 100%;
-    width: 71%;
-    transition: 0.7s;
+@media screen 
+and (max-device-width: 900px) {
+    .author-photo {
+        margin: 0 auto;
+        height: 100%;
+        width: 71%;
+        transition: 0.7s;
+    }
+    .author-line {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 11px;
+        width: 100%;
+        transition: 0.7s;
+    }
 }
-.author-line {
-    margin: 3%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 17px;
-    width: 100%;
-    transition: 0.7s;
+@media screen 
+and (min-device-width: 911px) {
+    .author-photo {
+        margin: 0 auto;
+        height: 100%;
+        width: 71%;
+        transition: 0.7s;
+    }
+    .author-line {
+        margin: 3%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 17px;
+        width: 100%;
+        transition: 0.7s;
+    }
 }
