--- a/src/components/author.css
+++ b/src/components/author.css
@@ -15,6 +15,7 @@ and (max-device-width: 900px) {
     .author-line {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 11px;
+        margin: 13px;
         width: 100%;
         transition: 0.7s;
     }
