--- a/src/App.css
+++ b/src/App.css
@@ -25,20 +25,23 @@
 
 @media screen 
 and (max-device-width: 900px) {
+  /* back button only show in each component */  
   .contentSwitcher {
-    padding: 5px 10px;
+    padding: 5px 5px;
     margin: 29px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 1px solid #ccc;
     border-radius: 4px;
     text-align: center;
-    width: 31px;
+    width: 23px;
     cursor: pointer;
   }
   /* main page button area*/  
   .project-area {
     margin: 0 auto;
-    padding: 3%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 7%;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -51,13 +54,14 @@ and (max-device-width: 900px) {
   }
   .project-title {
     text-align: center;
-    font-size: 13px;
+    font-size: 11px;
     cursor: pointer;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
 }
 @media screen 
 and (min-device-width: 911px) {
+  /* back button only show in each component */  
   .contentSwitcher {
     padding: 5px 10px;
     margin: 29px;
@@ -147,7 +151,6 @@ and (max-device-width: 900px) {
     text-align: center;
     margin: 0 auto;
     padding: 3%;
-    width: 71%;
   }
 }
 @media screen 
